--- a/house-landing-page/src/scss/style.scss
+++ b/house-landing-page/src/scss/style.scss
@@ -1,6 +1,9 @@
 @import "abstracts/settings";
 @import "abstracts/mixins";
 @import "abstracts/variables";
+@import "abstracts/fonts";
 
 @import "base/typography";
 @import "base/utilities";
+
+@import "components/header";
