--- a/house-landing-page/src/scss/abstracts/_variables.scss
+++ b/house-landing-page/src/scss/abstracts/_variables.scss
@@ -1,7 +1,10 @@
 :root {
   --font-family: "Raleway Regular", sans-serif;
+
   --main-green: #E1EDE6;
   --deep-green: #598D66;
   --text-black: #2C2D35;
   --text-gray: #86928B;
+
+  --container-offset: 165px;
 }
