--- a/house-landing-page/src/scss/abstracts/_fonts.scss
+++ b/house-landing-page/src/scss/abstracts/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Raleway Regular";
-  src: url('../fonts/RalewayRegular.woff2') format("woff2");
+  src: url('./files/fonts/RalewayRegular.woff2') format("woff2");
   font-weight: 500;
   font-display: swap;
   font-style: normal;
