--- a/house-landing-page/src/scss/base/_utilities.scss
+++ b/house-landing-page/src/scss/base/_utilities.scss
@@ -1,3 +1,10 @@
-.u-center-text {
-  text-align: center;
+.container {
+  margin: 0 auto;
+  //padding: 0 var(--container-offset);
+}
+
+.list-reset {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
