--- a/house-landing-page/src/scss/abstracts/_variables.scss
+++ b/house-landing-page/src/scss/abstracts/_variables.scss
@@ -6,5 +6,7 @@
   --text-black: #2C2D35;
   --text-gray: #86928B;
 
-  --container-offset: 165px;
+  --margin-list: 60px;
+  --gap: 30px;
+  --section-pb: 70px;
 }
