--- a/house-landing-page/src/scss/abstracts/_variables.scss
+++ b/house-landing-page/src/scss/abstracts/_variables.scss
@@ -3,8 +3,10 @@
 
   --main-green: #E1EDE6;
   --deep-green: #598D66;
+  --soft-yellow: #EEDB6D;
   --text-black: #2C2D35;
   --text-gray: #86928B;
+  --text-white: #F4F6F5;
 
   --margin-list: 60px;
   --gap: 30px;
