--- a/house-landing-page/src/scss/style.scss
+++ b/house-landing-page/src/scss/style.scss
@@ -10,3 +10,6 @@
 @import "components/header";
 @import "components/hero";
 @import "components/gallery";
+@import "components/new";
+@import "components/team";
+@import "components/footer";
