+ responsive for tablet

--- a/house-landing-page/src/scss/abstracts/_variables.scss
+++ b/house-landing-page/src/scss/abstracts/_variables.scss
@@ -3,7 +3,13 @@
 
   --main-green: #E1EDE6;
   --deep-green: #598D66;
+  --dark-green: #376B44;
+  --soft-green: #D4E8D9;
+
   --soft-yellow: #EEDB6D;
+  --bright-yellow: #FAEB97;
+  --mustard-yellow: #A38314;
+
   --text-black: #2C2D35;
   --text-gray: #86928B;
   --text-white: #F4F6F5;
