--- a/house-landing-page/src/scss/abstracts/_mixins.scss
+++ b/house-landing-page/src/scss/abstracts/_mixins.scss
@@ -1,17 +1,29 @@
-@mixin respond($breakpoint) {
-    @if $breakpoint == phone {
-        @media (max-width: 37.5em) { @content; } //600px
-    }
+@mixin for-desktop {
+  @media (min-width: (1025px)) {
+    @content;
+  }
+}
 
-    @if $breakpoint == tab-port {
-        @media (max-width: 56.25em) { @content; } //900px
-    }
+@mixin big-desktop {
+  @media (max-width: (1440px)) {
+    @content;
+  }
+}
 
-    @if $breakpoint == tab-land {
-        @media (max-width: 75em) { @content; } //1200px
-    }
+@mixin tablet {
+  @media (max-width: (1024px)) {
+    @content;
+  }
+}
 
-    @if $breakpoint == big-desktop {
-        @media (min-width: 112.5em) { @content; } //1800px
-    }
+@mixin small-tablet {
+  @media (max-width: (768px)) {
+    @content;
+  }
+}
+
+@mixin mobile {
+  @media (max-width: (576px)) {
+    @content;
+  }
 }
