--- a/house-landing-page/src/scss/components/_gallery.scss
+++ b/house-landing-page/src/scss/components/_gallery.scss
@@ -1,7 +1,7 @@
 .gallery {
   padding-bottom: var(--section-pb);
 
-  
+
   &__top {
     display: flex;
     justify-content: space-between;
@@ -25,6 +25,29 @@
     font-size: 20px;
     line-height: 23px;
     color: var(--text-black);
+    transition: background-color 0.3s ease-in-out,
+                color 0.3s ease-in-out,
+                outline 0.3s ease-in-out;
+
+    &:focus {
+      outline: none;
+    }
+
+    &:focus-visible {
+      background-color: var(--main-green);
+      color: var(--text-black);
+      outline: 2px solid var(--deep-green);
+    }
+
+    &:hover {
+      background-color: var(--deep-green);
+      color: var(--text-white);
+    }
+
+    &:active {
+      background-color: var(--dark-green);
+      color: var(--text-white);
+    }
   }
 
   &__list {
@@ -34,12 +57,15 @@
   &__item {
     display: flex;
     flex-direction: column;
+    height: 100%;
     padding: 20px;
     background-color: var(--main-green);
 
     &__content{
       display: flex;
       flex-direction: column;
+      align-items: flex-start;
+      flex-grow: 1;
       padding-top: 16px;
       padding-bottom: 10px;
     }
@@ -75,12 +101,10 @@
       line-height: 21px;
       color: var(--text-black);
     }
-
-    &__btn {
-      margin-top: auto;
-      width: 100%;
-    }
   }
-
-
+  
+  &__btn {
+    margin-top: auto;
+    width: 100%;
+  }
 }
