--- a/house-landing-page/src/scss/components/_new.scss
+++ b/house-landing-page/src/scss/components/_new.scss
@@ -43,4 +43,10 @@
     font-weight: 500;
     color: var(--text-white);
   }
+
+  &__btn {
+    @include mobile {
+      width: 100%;
+    }
+  }
 }
