--- a/house-landing-page/src/scss/components/_gallery.scss
+++ b/house-landing-page/src/scss/components/_gallery.scss
@@ -54,6 +54,14 @@
     }
   }
 
+  &-tabs__btn--active {
+    background-color: var(--dark-green);
+    color: var(--text-white);
+    transition: background-color 0.3s ease-in-out,
+              color 0.3s ease-in-out;
+    pointer-events: none;
+  }
+
   &__list {
     grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
   }
@@ -115,4 +123,12 @@
     margin-top: auto;
     width: 100%;
   }
+}
+
+.tabs__content {
+  display: none;
+}
+
+.tabs__content--active {
+  display: block;
 }
